fitness cart design is ok

--- a/src/components/Header/Fitness/Fitness.css
+++ b/src/components/Header/Fitness/Fitness.css
@@ -4,6 +4,8 @@
 }
 
 .fitness-container {
+    padding-top: 40px;
+    padding-left: 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 25px;
