--- a/src/components/fitnessInfo/FitnessInfo.css
+++ b/src/components/fitnessInfo/FitnessInfo.css
@@ -1,3 +1,15 @@
 .img {
-    height: 304px;
+    height: 200px;
+    width: 306px;
+    margin-left: 7px;
+    margin-top: 6px;
+    border-radius: 7px;
+
 }
+
+.containers {
+    height: 490px;
+
+}
+
+.btn {}
